# gb-r

./: .env  .gitignore  Cargo.toml  LICENSE  Readme.md
src/: main.rs
src/debugger/: asm_view.rs  commands.rs  cpu_view.rs  debugger.rs  debugger_app.rs  debugger_view.rs  interrupts_view.rs  io_registers_view.rs  joypad_view.rs  mbc_view.rs  mod.rs  oam_view.rs  palette_view.rs  tilemap_view.rs  tiles_view.rs  ui.rs  video_driver.rs
src/gbr/: alu.rs  bus.rs  cart_header.rs  cpu.rs  dma.rs  game_boy.rs  instruction.rs  interrupts.rs  io_registers.rs  joypad.rs  mbc.rs  memory.rs  memory_map.rs  mod.rs  oam.rs  ppu.rs  serial.rs  timer.rs  video_driver.rs
src/gbr/apu/: mod.rs  sound_channel.rs
src/gbr/instruction/: mod.rs  opcode.rs
src/gbr/io_registers/: background_palette.rs  lcd_control_register.rs  lcd_status_register.rs  mod.rs
src/gbr/ppu/: background_palette.rs  lcd_control_register.rs  lcd_status_register.rs  mod.rs  palette.rs  pixel_processor.rs  rgba.rs  tile.rs
