[package]
name = "gb-r"
version = "0.1.0"
authors = ["Davide Davelli"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
 byteorder = "1.3.4"  
 cursive = { version = "0.17.0", default-features = false, features = ["crossterm-backend"]}
 cursive_buffered_backend = "0.6"
 cursive-tabs = "0.7"
 cursive-flexi-logger-view = "0.5"
 enum_primitive = "*"
 flexi_logger = "0.22"
 log = "0.4.8"
 num = "0.3.1"
 pixels = "0.9.0"
 beryllium = { version = "0.7", features = ["use-raw-window-handle"] }
 fermium = { version = "20016.1.1", default-features = false }
 zstring = "0.1"
