[package]
name = "gb-r"
version = "0.1.0"
authors = ["Davide Davelli"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
 byteorder = "1.3.4"  
 dotenv = "0.15"
 egui = "0.17"
 egui-winit = "0.17"
 egui_wgpu_backend = "0.17"
 enum_primitive = "*"
 flume = "0.10"
 log = "0.4.8"
 nom = "7.1"
 num = "0.3.1"
 pixels = "0.9.0"
 pretty_env_logger = "0.3"
 rustyline = "9.1"
 thiserror = "1"
 winit = "0.26"
 winit_input_helper = "0.11"
