[package]
name = "gb-r"
version = "0.1.0"
authors = ["Davide Davelli"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
dotenv = "0.15"
egui = "0.22"
egui_extras = "0.22"
egui-winit = "0.22"
egui-wgpu = "0.22"
env_logger = "0.10"
enum_primitive = "*"
flume = "0.11"
image = "0.24"
lazy_static = "1.4"
log = "0.4.8"
num = "0.4.1"
pixels = "0.13.0"
random_color = "0.6"
rand = "*"
thiserror = "1"
winit = "0.28"
winit_input_helper = "0.14"

[dev-dependencies]
mockall = "0.11"
